--- a/src/app/components/rols/rols.component.html
+++ b/src/app/components/rols/rols.component.html
@@ -30,4 +30,21 @@
         </select>
       </div>
     </div>
+    <div class="row">
+      <div class="col-3">
+        <button class="btn btn-success" (click)="showWelcomeAlert()" >
+          Show
+        </button>
+      </div>
+      <div class="col-3">
+        <button class="btn btn-success" (click)="showMessage('Hello Disandu')" >
+          Show Message
+        </button>
+      </div>
+      <div class="col-3">
+        <button class="btn btn-success" (click)="showMessage('Hello Sanhida')" >
+          Show Message
+        </button>
+      </div>
+    </div>
 </div>
