Note Down What I Learned

--- a/src/app/components/rols/rols.component.html
+++ b/src/app/components/rols/rols.component.html
@@ -1,7 +1,7 @@
 <p>rols works!</p>
 <div class="row">
     <div class="col-3">
-        <p>{{firstName}}</p>
+        <p>{{firstName}}</p> <!-- USing the Interpolation Concept-->
     </div>
     <div class="col-3">
         <p>{{version}}</p>
@@ -20,7 +20,7 @@
         <input [type]="inputType"/>
       </div>
       <div class="col-3">
-        <input type="text" [(ngModel)]="firstName">
+        <input type="text" [(ngModel)]="firstName"><!--Using ngModel Concept-->
       </div>
       <div class="col-3">
         <select [(ngModel)]="selectedState">
